Fixed CMakeLists for out of tree builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,11 +9,14 @@ set(CMAKE_EXE_LINKER_FLAGS "${PY_LD_FLAGS}")
 
 link_directories(/usr/lib/python2.7/config-x86_64-linux-gnu)
 
-add_library(cegar_net src/network.cpp src/powerset.cpp src/interval.cpp)
-target_include_directories(cegar_net PRIVATE ../eigen)
+add_library(cegar_net ${CMAKE_CURRENT_SOURCE_DIR}/src/network.cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/powerset.cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/interval.cpp)
+target_include_directories(cegar_net PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/eigen)
 
-add_executable(learn src/bayesian_opt.cpp src/strategy.cpp)
+add_executable(learn ${CMAKE_CURRENT_SOURCE_DIR}/src/bayesian_opt.cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/strategy.cpp)
+target_include_directories(learn PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/eigen)
 target_link_libraries(learn cegar_net bayesopt nlopt gmp mpfr zonotope elinaux python2.7 pthread dl util m gomp)
+
+message("${CMAKE_CURRENT_SOURCE_DIR}")
 
 set(CMAKE_CXX_COMPILER mpicxx)
 
