--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,6 @@ add_executable(learn ${CMAKE_CURRENT_SOURCE_DIR}/src/bayesian_opt.cpp ${CMAKE_CU
 target_include_directories(learn PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/eigen)
 target_link_libraries(learn cegar_net bayesopt nlopt gmp mpfr zonotope elinaux python2.7 pthread dl util m gomp)
 
-message("${CMAKE_CURRENT_SOURCE_DIR}")
-
 set(CMAKE_CXX_COMPILER mpicxx)
+add_compile_definitions(CHARON_HOME="${CMAKE_CURRENT_SOURCE_DIR}/")
 
